# replicate-whisper-diarization

./: .gitignore  README.md  cog.yaml  predict.py  pyproject.toml
.github/workflows/: main.yml
whisper-diarization/: predict.py  test.py
